added rinoa's picture on playlist

--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Playlist">
   <ion-content>
-    <h1>Playlist</h1>
+    <h1>Rinoa</h1>
+    <img style="width:100px" src="img/rinoa.jpg">
   </ion-content>
 </ion-view>
